2006-09-13  Aaron Bockover  <abock@gnome.org>

	* plugins/MiniMode/Makefile.am:
	* plugins/Recommendation/Makefile.am:
	* plugins/Makefile.am:
	* plugins/Podcast/Makefile.am:
	* plugins/Radio/Makefile.am:
	* po/POTFILES.in:
	* configure.ac: Fixed any build issues, distcheck works; only 0.11.x
	is now supported; install directly to given prefix without really
	caring exactly where Banshee is to be nice to packagers; do not support
	user-mode plugin installation - pointless; lots of release-prep cleaning;
	disabled the iRadio plugin for now - it's not going to be fixed before
	the 0.11.0 release :-/

	* HACKING:
	* AUTHORS:
	* README: Updated

2006-09-13  Aaron Bockover  <abock@gnome.org>

	* plugins/MiniMode/MiniModeWindow.cs: Added tool tips (Michael Monreal,
	BGO #355844)

2006-09-13  Ruben Vermeersch  <ruben@savanne.be>

	* plugins/MiniMode/MiniModeWindow.cs: Get the default cover from
	Banshee.Base.Branding.

2006-09-08  Mike Urbanski <michael.c.urbanski@gmail.com> 
	
	* plugins/Podcast/DownloadCore/DownloadCore.cs:
	* plugins/Podcast/PodcastPlugin.cs:
	* plugins/Podcast/UI/PodcastFeedView.cs:
	* plugins/Podcast/UI/PodcastPixbufs.cs:
	* plugins/Podcast/UI/PodcastSource.cs:
	* plugins/Podcast/UI/PodcastPlaylistView.cs:  Stock icons are
	now used.  (BGO #346037)

	* plugins/Podcast/data/images/go-next.png:
	* plugins/Podcast/data/images/edit-delete.png:
	* plugins/Podcast/data/images/go-next-grey.png:
	* plugins/Podcast/data/images/dialog-error.png:
	* plugins/Podcast/data/images/view-refresh.png:  Deleted
	
	* plugins/Podcast/Podcast.mdp:  Removed (above) images from project.
	
2006-09-05  Aaron Bockover  <abock@gnome.org>

	* configure.ac:
	* plugins/Makefile.am:
	* plugins/SmartPlaylists: Moved the smart playlist plugin from 
	banshee-official-plugins into Banshee core as a built-in component;
	update your Banshee core checkout and remove any binary installation
	of the old SmartPlaylist plugin from your install!
