@@ -1,3 +1,8 @@
+2006-09-14  Mike Urbanski <michael.c.urbanski@gmail.com> 
+	
+	* plugins/Podcast/PodcastPlugin.cs:  Initiliaztion of the 'PodcastCore'
+	now takes place in the 'InterfaceInitialize' method.
+
 2006-09-13  Aaron Bockover  <abock@gnome.org>
 
 	* plugins/MiniMode/Makefile.am:
